# bijson

./: .clang-format  .clangd  .gitignore  Makeconf  Makefile  Makefile.am  Makerules  README.md  bijson.ver  buffer.c  buffer.h  build  bytes.c  bytes.h  common.c  common.h  configure.ac  constants.c  constants.h  container.c  container.h  decimal.c  decimal.h  error.c  format.h  io.c  io.h  libbijson.ver  parse.c  reader.c  reader.h  string.c  string.h  test.c  writer.c  writer.h
debian/: README.Debian  changelog  control  copyright  rules
include/: common.h  reader.h  writer.h
include/bijson/: common.h  reader.h  writer.h
lib/: common.c  common.h  config.h  error.c  io.c  io.h  reader.c  reader.h  writer.c  writer.h
lib/reader/: array.c  array.h  decimal.c  decimal.h  object.c  object.h  parse.c  string.c  string.h
lib/reader/object/: index.c  index.h  key.c  key.h  key_range.c
lib/writer/: array.c  array.h  buffer.c  buffer.h  bytes.c  constants.c  container.c  container.h  decimal.c  object.c  object.h  parse.c  string.c
m4/: check-builtin.m4  remove-flag.m4
tests/: wrapper
